--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -129,7 +129,7 @@
   </div>
 
   <!-- Delete Modal -->
-  <!-- <div class="modal fade" id="deleteEmployeeModal" tabindex="-1" role="dialog" aria-labelledby="deleteModelLabel" aria-hidden="true">
+  <div class="modal fade" id="deleteEmployeeModal" tabindex="-1" role="dialog" aria-labelledby="deleteModelLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
           <div class="modal-header">
@@ -142,13 +142,12 @@
             <p>Are you sure you want to delete employee {{deleteEmployee?.name}}?</p>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-dismiss="modal">No</button>
-                <button (click)="onDeleteEmloyee(deleteEmployee?.id)" class="btn btn-danger" data-dismiss="modal">Yes</button>
+                <button (click)="onDeleteEmployee(deleteEmployee?.id)" class="btn btn-danger" data-dismiss="modal">Yes</button>
             </div>
           </div>
       </div>
     </div>
-  </div> -->
-
+  </div>
 
   <!-- Notification for no employees -->
   <div *ngIf="employees?.length == 0" class="col-lg-12 col-md-12 col-xl-12">
